# SnakeCLI

./: CMakeLists.txt  README.md  snake
src/: game.c  game.h  input.c  input.h  main.c  render.c  render.h
